--- a/rsb-file-upload/pom.xml
+++ b/rsb-file-upload/pom.xml
@@ -19,6 +19,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>1.8</java.version>
+        <commons.io.version>2.13.0</commons.io.version>
+        <commons.fileupload.version>1.3.3</commons.fileupload.version>
     </properties>
 
     <dependencies>
@@ -53,7 +55,25 @@
             <version>1.2.83</version>
         </dependency>
 
+        <!--io常用工具类 -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.io.version}</version>
+        </dependency>
 
+        <!--文件上传工具类 -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>${commons.fileupload.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-io</artifactId>
+                    <groupId>commons-io</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
     <build>
